--- a/Day7_Hashmap_454_383_15_18.md
+++ b/Day7_Hashmap_454_383_15_18.md
@@ -263,21 +263,26 @@ class Solution {
 * 和不为0，所以剪枝操作需要考虑到数组包含负数，target等于负数的情况（如果i>0，target>0，i>target就剪枝，对i+k同理）
 * 四个指针：i，k，left，right
 * i和i+k在for循环中都需要进行剪枝和去重（检查和前一个项是否一样，i需要确保i》k+1之后再检查和前一个项是否一样）
+* 注意一下i的剪枝条件，是跳出i的循环（break）而不是直接return（具体看评论）
 ```java
 class Solution {
     public List<List<Integer>> fourSum(int[] nums, int target) {
         List<List<Integer>> res = new ArrayList<>();
         Arrays.sort(nums);
         for (int k=0; k<nums.length; k++){
-            if (k > 0 && target >0 && k > target){
+            if (k > 0 && target >0 && nums[k] > target){
                 return res;
             }
             if (k>0 && nums[k]==nums[k-1]){
                 continue;
             }
             for (int i=k+1; i<nums.length; i++){
-                if (nums[i]+nums[k]>0 && target >0 && nums[i]+nums[k]>target){
-                    return res;
+                if (nums[i] + nums[k] > target && nums[i] + nums[k] >= 0){
+                    //这里的剪枝逻辑要额外注意，我一开始写成：nums[i]+nums[k]>0 && target >0 && nums[i]+nums[k]>target
+                    //我写的逻辑会导致错误剪枝，因为java会一个一个看条件，一个不满足就导致判断false。target > 0 这个条件没必要，因为 target 可能是负数，不应该忽略负数的情况。
+                    //顺序很重要，如果先判断ik和是否大于0，可能会误删一些负target，所以先判断nums[i] + nums[k] > target比较安全
+                    //和大于0还是大于等于0:包括0会更严谨
+                    break;//这里用break跳出i的for循环，查找下一个k的情况,而不是直接return res。想一个数组{-5,-3,-2,0,2,3,5},target=0，如果我们迭代k=-5,i=5就直接return，就会错过k=1的时候的一个四元组（-3，-2，2，3）
                 }
                 if (i > k+1 && nums[i]==nums[i-1]){
                     continue;
