--- a/Day7_Hashmap_454_383_15_18.md
+++ b/Day7_Hashmap_454_383_15_18.md
@@ -264,6 +264,9 @@ class Solution {
 * 四个指针：i，k，left，right
 * i和i+k在for循环中都需要进行剪枝和去重（检查和前一个项是否一样，i需要确保i》k+1之后再检查和前一个项是否一样）
 * 注意一下i的剪枝条件，是跳出i的循环（break）而不是直接return（具体看评论）
+* 时间复杂度: O(n^3)（i，k，left+right嵌套）
+* 空间复杂度: O(1)（除了返回的数组没有额外空间）
+#
 ```java
 class Solution {
     public List<List<Integer>> fourSum(int[] nums, int target) {
