--- a/Day13_BinaryTree144_145_94_102.md
+++ b/Day13_BinaryTree144_145_94_102.md
@@ -456,7 +456,7 @@ class Solution {
             //用itemlist来记录每一节点的值，好之后放进reslist
             List<Integer> itemList = new ArrayList<Integer>();
             int len = que.size();//这里记录一下每层有多少元素
-
+            //这里也可用for循环for (int i = 0; i < len; i++)，把len--去掉
             while (len>0){
                 TreeNode tempNode = que.poll();//弹出层下一个要处理的元素
                 itemList.add(tempNode.val);
