--- a/Day15_BinaryTree_110_257_404_222.md
+++ b/Day15_BinaryTree_110_257_404_222.md
@@ -45,7 +45,7 @@ class Solution {
 * https://leetcode.com/problems/binary-tree-paths/description/
 * 文章： https://programmercarl.com/0257.%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E6%89%80%E6%9C%89%E8%B7%AF%E5%BE%84.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE
 * 视频：https://www.bilibili.com/video/BV1ZG411G7Dh?vd_source=62d2d5517cc65d630d19b32ed3dcf9c5&spm_id_from=333.788.videopod.sections
-### chat解法：string储存path，隐藏回溯
+### chat解法：string储存path，隐藏回溯，代码简短
 * 采用前序遍历：先append中节点数值，再去访问左右子树
 * 直接使用 String，不需要手动回溯（backtr，因为 String 在 Java 中是不可变的（immutable），不会影响上一层。
 ```java
@@ -74,4 +74,216 @@ class Solution {
     }
 }
 ```
-### 代码随想录解法：int数组储存path，需要显性回溯
+### 代码随想录解法：int数组储存path，展示显性回溯
+* 递归三部曲
+    * 参数和返回值： 函数traversal，返回void（直接修改result List<String>），参数：根节点，int数组记录单条路径，List<String> result
+    * 确定终止条件：收集到叶子节点就结束了，没有必要遍历到空节点-> if node.left ==null && node.right == null就到叶子节点了，result.add path 需要额外处理加入->，path数组转化成string类型，return
+    * 单层递归逻辑：前序遍历中左右：‘中’的处理过程= 把节点的数值添加进path。 这一步得在终止条件的上面进行，不然会把叶子节点的值落下。中写完以后写’左‘向左递归：注意判断节点不能为空，不然到达左子树的‘中’步骤会出现空指针异常：
+        * if node.left {traversal(node.left, path, result);
+        *                 path.pop_back();
+        * 为什么这里要pop back：traversal结束以后，result里加入了这一个路径里的所有值，我们只有把靠下的值一个一个弹出去才能回退到可以开始新路径的根节点
+        * '右’同理： traversal（右孩子，path，result），回溯path.pop_back();
+```java
+class Solution {
+    public List<String> binaryTreePaths(TreeNode root) {
+        List<String> res = new ArrayList<>();
+        if (root == null){
+            return res;
+        }
+        List<Integer> path = new ArrayList<>();
+        traverse(root, path, res);
+        return res;
+    }
+    private void traverse(TreeNode node, List<Integer> path, List<String> res){
+        path.add(node.val);
+        if (node.left==null && node.right ==null){
+            //到达叶子节点，开始拼接path的内容成为string
+            StringBuilder sb = new StringBuilder();
+            for (int i=0; i<path.size()-1;i++){
+                sb.append(path.get(i)).append("->");
+            }
+            sb.append(path.get(path.size()-1));
+            res.add(sb.toString());
+            return;
+        }
+        if (node.left != null){
+            traverse(node.left, path,res);
+            //ArrayList.remove(index) 来进行回溯
+            path. remove(path.size() -1);
+        }
+        if (node.right != null){
+            traverse(node.right, path, res);
+            path.remove(path.size()-1);
+        }
+    }
+}
+```
+## 404. Sum of Left Leaves
+* https://leetcode.com/problems/sum-of-left-leaves/description/
+* 文章：https://programmercarl.com/0404.%E5%B7%A6%E5%8F%B6%E5%AD%90%E4%B9%8B%E5%92%8C.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE
+* 视频：https://www.bilibili.com/video/BV1GY4y1K7z8?vd_source=62d2d5517cc65d630d19b32ed3dcf9c5&spm_id_from=333.788.videopod.sections
+* 和平常不一样，如果我们判断条件仅仅是node.left & node.right !=null的话，是不能知道这个节点是不是左叶子节点的
+* 只能通过父节点判断：node.left != null, 且node.left.left == null && node.left.right == null
+* 后序遍历：收集左子树和右子树的左叶子节点之和（处理左右），返回上一层（中）
+### gpt后序遍历递归
+* 逻辑比较混乱：累加sum的逻辑和递归的逻辑混在一起
+```java
+class Solution {
+    public int sumOfLeftLeaves(TreeNode root) {
+        return traverse(root);
+    }
+
+    private int traverse (TreeNode node){
+        if (node == null) return 0;
+        int sum = 0;
+        //处理左边
+        sum += traverse(node.left);
+        //处理右边
+        sum += traverse(node.right);
+        //处理当前节点：如果左子节点是叶子，添加到sum
+        if (node.left != null && node.left.left == null && node.left.right ==null){
+            //这里不要return，因为我们要累加每个子树的左叶子值
+            sum += node.left.val;
+        }
+        return sum;
+    }
+}
+```
+### 代码随想录后序遍历
+* 逻辑更清晰：左右后的后序遍历处理顺序
+* 处理了：左子树的左叶子节点和，右子树的左叶子节点和，当前节点如果左子树是一个叶子节点的值
+```java
+class Solution {
+    public int sumOfLeftLeaves(TreeNode root) {
+        if (root == null) return 0;
+
+        int leftValue = sumOfLeftLeaves(root.left);    // 左
+        int rightValue = sumOfLeftLeaves(root.right);  // 右
+        
+        int midValue = 0;
+        if (root.left != null && root.left.left == null && root.left.right == null) { 
+            midValue = root.left.val; // 处理当前节点的贡献
+        }
+        
+        return midValue + leftValue + rightValue;  // 中
+    }
+}
+```
+### 代码随想录层序遍历
+* 比递归法更清晰直观
+```java
+class Solution {
+    public int sumOfLeftLeaves(TreeNode root) {
+        if (root == null) return 0;
+
+        int sum = 0;
+        Queue<TreeNode> que = new LinkedList<>();
+        que.offer(root);
+        while (que.size()>0){
+            TreeNode node = que.poll();
+            //左子节点不为空就加入进que
+            if (node.left != null){
+                que.offer(node.left);
+                //既然不为空，我们就能检查左节点的左右子节点是否为空，即左节点是否为叶子节点
+                if (node.left.left == null && node.left.right == null){
+                    sum += node.left.val;
+                }
+            }
+            //右节点不为空就加入que，后序跳到node.right以后会自动检查它的左子节点是不是叶子
+            if (node.right != null){
+                que.offer(node.right);
+            }
+        }
+        return sum;
+    }
+}
+```
+## 222. Count Complete Tree Nodes
+* https://leetcode.com/problems/count-complete-tree-nodes/description/
+* 文章： https://programmercarl.com/0222.%E5%AE%8C%E5%85%A8%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E8%8A%82%E7%82%B9%E4%B8%AA%E6%95%B0.html
+* 视频： https://www.bilibili.com/video/BV1eW4y1B7pD/?vd_source=62d2d5517cc65d630d19b32ed3dcf9c5
+### 我的层序遍历解法
+* 时间复杂度：O(n),因为遍历到了每一个节点
+* 空间复杂度： 最坏情况下是O(n)（退化成单链表状的树）, 每个节点访问一次，最好情况下是O(logn) 完全平衡二叉树
+```java
+class Solution {
+    public int countNodes(TreeNode root) {
+        if (root == null) return 0;
+        Queue<TreeNode> que = new LinkedList<>();
+        int sum = 0;
+        que.offer(root);
+        while(que.size()>0){
+            TreeNode node = que.poll();
+            sum += 1;
+            if (node.left != null){
+                que.offer(node.left);
+            }
+            if (node.right != null){
+                que.offer(node.right);
+            }
+        }
+        return sum;
+    }
+}
+```
+### 当成普通二叉树的后序遍历递归法
+```java
+class Solution {
+    public int countNodes(TreeNode root) {
+        return getNum(root);
+    }
+
+    private int getNum(TreeNode node){
+        int sum = 0;
+        if (node == null){
+            return 0;
+        }
+        int leftNum = getNum(node.left);
+        int rightNum =getNum(node.right);
+        return leftNum + rightNum +1;
+    }
+}
+```
+### 递归：利用完全二叉树的思路
+* 完全二叉树：除了最后一层，上面全部节点都是满的。底层节点从左到右依次排开，不能跳过节点
+* 如果子树是满二叉树（每层都填满了），那子树的节点数量可以用2^k-1, k为深度（假设root深度为1），而且子树如果是满二叉树，向左遍历和右遍历的深度一定相同（符合完全二叉树的特性，左右最底层子节点之间的节点不能为空）
+* 如果子树不是满二叉树，那我们就要继续向下遍历找满二叉树（遇到单个节点，它也是满二叉树）
+* 找到了的话，就可以通过深度直接计算这个满二叉树子树的节点数量，计算完子树的满二叉树的节点数量，向上返回
+* 这样就可以避免遍历所有节点，只遍历了左侧和右侧的节点，省略了中间的节点遍历
+* 代码实现：
+* 返回值，参数：返回int，参数node
+* 终止条件： 遇到node为空，return0； 遇到子树为满二叉树情况，return子树的节点数量。怎么判断子树为满二叉树？使用左右两个指针判断左右深度
+    * left = node.left;
+    * right = node.right;
+    * int leftdepth = 0, rightdepth = 0;
+    * while left (left = left.left; leftdepth ++)
+    * while right (right = right.right; right depth ++)
+    * if (leftdepth == rightdepth) //是满二叉树
+    * return 2^(leftdepth)-1
+* 单层递归逻辑：向左遍历，向右遍历，res = 左子树+右子树+1；
+```java
+class Solution {
+    public int countNodes(TreeNode root) {
+        //第一个终止条件
+        if (root==null) return 0;
+        TreeNode left = root.left;
+        TreeNode right = root.right;
+        //这里初始化为1，因为根节点已经是一个valid层
+        int leftD = 1, rightD = 1;
+        while (left != null){
+            left = left.left;
+            leftD +=1;
+        }
+        while (right != null){
+            right = right.right;
+            rightD +=1;
+        }
+        //第二个终止条件
+        if (leftD == rightD) return (1<<leftD)-1;
+        int leftCount = countNodes(root.left);
+        int rightCount = countNodes(root.right);
+        return leftCount + rightCount +1;
+
+    }
+}
+```
