--- a/Day27_Greedy1_455_376_53.md
+++ b/Day27_Greedy1_455_376_53.md
@@ -218,7 +218,79 @@ class Solution {
 
 ## 53. Maximum Subarray
 * https://leetcode.com/problems/maximum-subarray/description/
-
+* 文章：https://programmercarl.com/0053.%E6%9C%80%E5%A4%A7%E5%AD%90%E5%BA%8F%E5%92%8C.html#%E6%80%9D%E8%B7%AF
+* 视频：https://www.bilibili.com/video/BV1aY4y1Z7ya?vd_source=62d2d5517cc65d630d19b32ed3dcf9c5&spm_id_from=333.788.videopod.sections
+* 注意我们要找最大子数组，所以目的不是‘避开所有负数‘，而是找到一个连贯的子数组，保证其所有元素的和是最大的
+### 暴力解法（java会超时）
+* 两层for循环
+* i记录起始位置，而且记录从i开始的子数组的最大和sum是多少，如果比res大的话就更新res
+* j负责从i位置开始给sum一个一个地加入子元素的值，更新sum，并且检查更新后的sum和res谁更大
+* 时间复杂度：O(n^2)
+* 空间复杂度：O(1)
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        //初始化res，用integer的最小值就可以(-2^31)
+        int res = Integer.MIN_VALUE;
+        //初始化从每个index i开始遍历，最大的sum只能是0，每次更新i就得把sum归零
+        int sum ;
+        for (int i = 0; i<nums.length; i++){
+            sum=0;
+            //从i开始一个一个遍历
+            for (int j = i; j<nums.length; j++){
+                //如果加上当前的值sum比res要大就更新res
+                sum += nums[j];
+                res = sum>res ? sum:res;
+            }
+        }
+        return res;
+    }
+}
+```
+### 代码随想录解法
+* 只用一层for循环
+* 如果加入当前值，累积的sum小于0了，那就不能包括之前的所有东西了，因为之前所有的东西到现在加进来的sum是负数，对后面加进来的只有负面影响。这个时候sum归零
+* res只记录sum出现过的最大值
+* 我一开始的解法：有bug
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        //max依然是初始化为min，防止全是负数的情况（初始化为0就不能处理这种情况）
+        int max = Integer.MIN_VALUE;
+        int sum = 0; //sum是从0开始的，因为什么都没加进去的时候就是0
+        for (int i = 0; i<nums.length; i++){
+            //假如nums里只有负数，以下逻辑是处理不了的。所以无论累计sum是否小于0，都得sum += nums[i]
+            if ((sum + nums[i])<0){
+                sum = 0;
+                continue;
+            } 
+            sum += nums[i];
+            max = sum > max ? sum:max;
+        }
+        return max;
+    }
+}
+```
+* debug以后
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        //max依然是初始化为min，防止全是负数的情况（初始化为0就不能处理这种情况）
+        int max = Integer.MIN_VALUE;
+        int sum = 0; //sum是从0开始的，因为什么都没加进去的时候就是0
+        for (int i = 0; i<nums.length; i++){
+            //确保任何情况中sum都会加入nums[i]
+            sum += nums[i];
+            max = sum > max ? sum:max;
+            //如果sum已经小于0，那我们就要将它归零，相当于暴力解法中改变起始位置的操作
+            if (sum<0){
+                sum = 0;
+            }
+        }
+        return max;
+    }
+}
+```
 
 
   
