Update and rename Day52.md to Day52_km101_km102_km103_km104.md

--- a/Day52_km101_km102_km103_km104.md
+++ b/Day52_km101_km102_km103_km104.md
@@ -416,6 +416,296 @@ public class Main{
 * 从border1和2开始出发寻找，生成两个visited【】【】
 * 对比两个visited，如果两个表格同时含有同一个格子，说明这个格子可以流水到border1和2
 ```java
+import java.util.*;
 
+public class Main{
+
+    static int[][] dir = {{0,1},{1,0},{0,-1},{-1,0}};
+    static Queue<int[]> ans = new LinkedList<>();
+    public static void main(String[] args){
+        Scanner sc = new Scanner(System.in);
+        int n = sc.nextInt();
+        int m = sc.nextInt();
+        int[][] grid = new int[n][m];
+
+        for (int i=0;i<n;i++){
+            for (int j=0;j<m;j++){
+                grid[i][j] = sc.nextInt();
+            }
+        }
+        boolean[][] visitedBorder1 = new boolean[n][m];
+        boolean[][] visitedBorder2 = new boolean[n][m];
+        for (int i=0;i<n;i++){
+            visitedBorder1[i][0] = true;
+            dfs(grid,visitedBorder1,i,0);
+        }
+        for (int j=0;j<m;j++){
+            visitedBorder1[0][j] = true;
+            dfs(grid,visitedBorder1,0,j);
+        }
+        for (int i = 0; i<n;i++){
+            visitedBorder2[i][m-1] = true;
+            dfs(grid,visitedBorder2,i,m-1);
+        }
+        for (int j=0;j<m;j++){
+            visitedBorder2[n-1][j] = true;
+            dfs(grid,visitedBorder2,n-1,j);
+        }
+
+        for (int i=0;i<n;i++){
+            for (int j=0;j<m;j++){
+                if (visitedBorder1[i][j] && visitedBorder2[i][j]){
+                    System.out.println(i + " " + j);
+                }
+            }
+        }
+        
+    }
+
+    public static void dfs (int[][]grid, boolean[][]visited, int x, int y){
+        for (int i=0;i<4;i++){
+            int nextX = x + dir[i][0];
+            int nextY = y + dir[i][1];
+            if (nextX<0|| nextY<0 || nextX >= grid.length || nextY >= grid[0].length){
+                continue;
+            }
+            //计算从边上往上回流，那么下一个格子的高度就得>=x，y
+            if (!visited[nextX][nextY] && grid[nextX][nextY]>= grid[x][y]){
+                visited[nextX][nextY] = true;
+                dfs(grid,visited,nextX,nextY);
+            }
+        }
+    }
+}
+```
+### bfs优化已有的写法
+* bfs可以有效防止栈溢出
+```java
+import java.util.*;
+
+public class Main{
+
+    static int[][] dir = {{0,1},{1,0},{0,-1},{-1,0}};
+    static Queue<int[]> ans = new LinkedList<>();
+    public static void main(String[] args){
+        Scanner sc = new Scanner(System.in);
+        int n = sc.nextInt();
+        int m = sc.nextInt();
+        int[][] grid = new int[n][m];
+
+        for (int i=0;i<n;i++){
+            for (int j=0;j<m;j++){
+                grid[i][j] = sc.nextInt();
+            }
+        }
+        boolean[][] visitedBorder1 = new boolean[n][m];
+        boolean[][] visitedBorder2 = new boolean[n][m];
+        for (int i=0;i<n;i++){
+            bfs(grid,visitedBorder1,i,0);
+        }
+        for (int j=0;j<m;j++){
+            bfs(grid,visitedBorder1,0,j);
+        }
+        for (int i = 0; i<n;i++){
+            bfs(grid,visitedBorder2,i,m-1);
+        }
+        for (int j=0;j<m;j++){
+            bfs(grid,visitedBorder2,n-1,j);
+        }
+
+        for (int i=0;i<n;i++){
+            for (int j=0;j<m;j++){
+                if (visitedBorder1[i][j] && visitedBorder2[i][j]){
+                    System.out.println(i + " " + j);
+                }
+            }
+        }
+        
+    }
+
+    public static void bfs (int[][]grid, boolean[][]visited, int x, int y){
+        Queue<int[]> que = new LinkedList<>();
+        que.add(new int[]{x,y});
+        visited[x][y] = true;
+        while (!que.isEmpty()){
+            int[] currXY = que.poll();
+            int currX = currXY[0];
+            int currY = currXY[1];
+            for (int i=0;i<4;i++){
+            int nextX = currX + dir[i][0];
+            int nextY = currY + dir[i][1];
+            if (nextX<0|| nextY<0 || nextX >= grid.length || nextY >= grid[0].length){
+                continue;
+            }
+            //计算从边上往上回流，那么下一个格子的高度就得>=x，y
+            if (!visited[nextX][nextY] && grid[nextX][nextY]>= grid[currX][currY]){
+                que.add(new int[] {nextX,nextY});
+                visited[nextX][nextY] = true;
+            }
+        }
+        }
+        
+    }
+}
+```
+## km104. 建造最大岛屿 
+* https://kamacoder.com/problempage.php?pid=1176
+* 视频：https://www.bilibili.com/video/BV1Dn5CzZEw1?vd_source=62d2d5517cc65d630d19b32ed3dcf9c5&spm_id_from=333.788.videopod.sections
+* 文章；https://www.bilibili.com/video/BV1Dn5CzZEw1?vd_source=62d2d5517cc65d630d19b32ed3dcf9c5&spm_id_from=333.788.videopod.sections
+### bfs暴力遍历所有海洋格（dfs会栈溢出）
+* 建造visitedOcean来记录什么海洋格已经走过了
+* 每个海洋格如果之前没有走过，那么单独新建一个visited，把这个海洋格变成陆地格，然后用bfs遍历和它同样一片岛屿的陆地大小
+* 时间复杂度：O(m*n)^2
+* 空间复杂度:O(m*n)
+```java
+import java.util.*;
+
+public class Main{
+    static int[][] dir = {{0,1},{1,0},{0,-1},{-1,0}};
+    static int ans = 0;
+    static int currarea = 0;
+    public static void main(String[] args){
+        Scanner sc = new Scanner(System.in);
+        int n = sc.nextInt();
+        int m = sc.nextInt();
+        int[][] grid = new int[n][m];
+        for (int i=0;i<n;i++){
+            for (int j=0;j<m;j++){
+                grid[i][j] = sc.nextInt();
+            }
+        }
+
+        boolean[][] visitedOcean = new boolean[n][m];
+        for (int i=0;i<n;i++){
+            for (int j=0;j<m;j++){
+                if (!visitedOcean[i][j] && grid[i][j]==0){
+                    currarea = 1;
+                    boolean[][] visited = new boolean[n][m];
+                    grid[i][j] = 1;
+                    bfs(grid,visited,i,j);
+                    ans = Math.max(ans,currarea);
+                    grid[i][j] = 0;
+                }
+            }
+        }
+        System.out.print(ans);
+
+    }
+    public static void bfs(int[][]grid, boolean[][]visited,int x, int y){
+        Queue<int[]> que = new LinkedList<>();
+        que.add(new int[]{x,y});
+        visited[x][y] = true;
+        while (!que.isEmpty()){
+            int[] currXY = que.poll();
+            int currX = currXY[0];
+            int currY = currXY[1];
+            for (int i=0;i<4;i++){
+                int nextX = currX + dir[i][0];
+                int nextY = currY + dir[i][1];
+                if (nextX <0 || nextY <0 || nextX>=grid.length || nextY >= grid[0].length){
+                    continue;
+                }
+                if (!visited[nextX][nextY] && grid[nextX][nextY]==1){
+                    que.add(new int[]{nextX,nextY});
+                    visited[nextX][nextY]=true;
+                    currarea ++;
+                }
+            }
+        }
+        
+    }
+}
+```
+###优化bfs思路
+* 遍历一遍，把所有岛屿给一个新的id，并且id从2开始计数（区别于1和0）
+* 每遍历一个岛就把id和面积存在map里
+* 遍历所有海洋格子，检查上下左右的grid[x][y]是不是非0非1的id，如果是的话，直接用那个id来找那个岛的面积，加到已有面积上，注意同一个岛如果包围了一个海洋格子，就不能重复添加面积（使用set去重）
+* 边界：假如全部格子都是陆地没有海洋，那就需要把ans初始化成最大的岛屿面积（遍历map里的value，找出最大的，赋值给ans）
+```java
+import java.util.*;
+
+public class Main{
+    static int[][] dir = {{0,1},{1,0},{0,-1},{-1,0}};
+    static int ans=0;
+    static int currarea = 0;
+    static int mark = 2;
+    public static void main(String[] args){
+        // stores the island id and its area;
+        Map<Integer, Integer> getArea = new HashMap<>();
+        //stores the id of the islands
+        Scanner sc = new Scanner(System.in);
+        int n = sc.nextInt();
+        int m = sc.nextInt();
+        int[][] grid = new int[n][m];
+        for (int i=0;i<n;i++){
+            for (int j=0;j<m;j++){
+                grid[i][j] = sc.nextInt();
+            }
+        }
+        boolean[][] visited = new boolean[n][m];
+        for (int i=0;i<n;i++){
+            for (int j=0;j<m;j++){
+                if (!visited[i][j] && grid[i][j]==1){
+                    currarea = 1;
+                    bfs(grid,visited,i,j,mark);
+                    getArea.put(mark, currarea);
+                    mark++;
+                }
+            }
+        }
+        boolean[][] visitedOcean = new boolean[n][m];
+        //解决没有海水全是陆地的情况，只少陆地面积是最大岛的面积
+        for (int area: getArea.values()){
+            ans = Math.max(ans,area);
+        }
+        for (int i=0;i<n;i++){
+            for (int j=0;j<m;j++){
+                if (!visitedOcean[i][j] && grid[i][j]==0){
+                    int totalarea = 1;
+                    Set<Integer> neighborIslands = new HashSet();
+                    for (int k=0;k<4;k++){
+                        int xcor = i + dir[k][0];
+                        int ycor = j + dir[k][1];
+                        if (xcor<0 || ycor<0 || xcor>=n || ycor>=m){
+                            continue;
+                        }
+                        if (grid[xcor][ycor]!=0 && !neighborIslands.contains(grid[xcor][ycor])){
+                            totalarea += getArea.get(grid[xcor][ycor]);
+                            neighborIslands.add(grid[xcor][ycor]);
+                        }
+                    }
+                    ans = Math.max(ans, totalarea);
+                }
+            }
+        }
+        System.out.print(ans);
+
+    }
+    public static void bfs(int[][]grid, boolean[][]visited,int x, int y ,int mark){
+        Queue<int[]> que = new LinkedList<>();
+        que.add(new int[]{x,y});
+        visited[x][y] = true;
+        grid[x][y] = mark;
+        while (!que.isEmpty()){
+            int[] currXY = que.poll();
+            int currX = currXY[0];
+            int currY = currXY[1];
+            for (int i=0;i<4;i++){
+                int nextX = currX + dir[i][0];
+                int nextY = currY + dir[i][1];
+                if (nextX <0 || nextY <0 || nextX>=grid.length || nextY >= grid[0].length){
+                    continue;
+                }
+                if (!visited[nextX][nextY] && grid[nextX][nextY]==1){
+                    que.add(new int[]{nextX,nextY});
+                    visited[nextX][nextY]=true;
+                    currarea ++;
+                    grid[nextX][nextY] = mark;
+                }
+            }
+        }
+        
+    }
+}
 ```
 
