--- a/Day01_Array_704_27_977.md
+++ b/Day01_Array_704_27_977.md
@@ -59,6 +59,31 @@ class Solution {
     }
 }
 ```
+* 10/11/2025 温习；用新旧数组的逻辑理解快满指针
+* https://www.bilibili.com/video/BV12A4y1Z7LP?spm_id_from=333.788.videopod.sections
+```
+class Solution {
+    public int removeElement(int[] nums, int val) {
+        //旧指针用来遍历nums （快指针）
+        int oldPointer = 0;
+        //新指针用来指向需要填充的位置（我们不换位，只填充）， （慢指针）  
+        //只有!=val的数字才能被用来填充新数组，假如旧指针指向的数值==val, 就把旧指针继续向下一个遍历
+        int newPointer = 0;
+        int n = nums.length;
+        while (oldPointer < n){
+            //只有填充了，才移动新指针
+            if (nums[oldPointer] != val){
+                nums[newPointer] = nums[oldPointer];
+                newPointer ++;
+            }
+            //不管是不是有填充，都移动旧指针（因为旧指针是用来检查数组里的所有数字的）
+            oldPointer ++;
+        }
+        //直接返回newpointer, 就好，因为假如我们只填充了第一个，后面都是val，那么newpointer此时已经从0到1，也就是新数组中前k个非val数字的size
+        return newPointer;
+    }
+}
+```
 ### 快慢指针
 * 快指针用来遍历整个数组
 * 慢指针指向下一个需要填充非target的位置
