--- a/Day01_Array_704_27_977.md
+++ b/Day01_Array_704_27_977.md
@@ -61,7 +61,7 @@ class Solution {
 ```
 * 10/11/2025 温习；用新旧数组的逻辑理解快满指针
 * https://www.bilibili.com/video/BV12A4y1Z7LP?spm_id_from=333.788.videopod.sections
-```
+```java
 class Solution {
     public int removeElement(int[] nums, int val) {
         //旧指针用来遍历nums （快指针）
