--- a/Day06_Hashmap_242_349_202_1.md
+++ b/Day06_Hashmap_242_349_202_1.md
@@ -192,6 +192,26 @@ class Solution {
   * ```java
     record[Character.toLowerCase(s.charAt(i)) -'a']++
     ```
+* 二刷：适用所有ASCII character的例子
+```java
+class Solution {
+    public boolean isAnagram(String s, String t) {
+        Map<Character, Integer> mapS = new HashMap<>();
+        Map<Character, Integer> mapT = new HashMap<>();
+        for (Character c : s.toCharArray()){
+            mapS.put(c, mapS.getOrDefault(c, 0) + 1);
+        }
+        for (Character c : t.toCharArray()){
+            mapT.put(c, mapT.getOrDefault(c, 0) + 1);
+        }
+        //the underlying mechanism of .euqals()
+        //is comparing all the key-value pairs in the entryset 
+        //so time complexity is O(n), space complexity is O(1) (no new space created)
+        //易错点： mapS==mapT比较的是memory address
+        return mapS.equals(mapT);
+
+```
+
 ## 349. Intersection of Two Arrays
 * https://leetcode.com/problems/intersection-of-two-arrays/description/
 * 文章：https://programmercarl.com/0349.%E4%B8%A4%E4%B8%AA%E6%95%B0%E7%BB%84%E7%9A%84%E4%BA%A4%E9%9B%86.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE
@@ -242,8 +262,17 @@ class Solution {
   * n 是 nums1 数组的长度（set1 的空间）。
   * k 是交集元素的个数（resSet 和结果数组的空间）。
 
+
+
 ![Screenshot 2025-03-04 at 21 44 44](https://github.com/user-attachments/assets/c68c616d-94cc-4ab7-8cbb-2b456c31c98c)
+* 二刷： .stream().mapToInt()拆箱有两种方式
+```java
+ int[] res = resSet.stream().mapToInt(Integer::intValue).toArray();
+ int[] res = resSet.stream().mapToInt(x->x).toArray();
 ```
+<img width="802" height="249" alt="Screenshot 2025-11-17 at 23 29 04" src="https://github.com/user-attachments/assets/fc062bbc-0a46-4e39-8879-cc71afe57b79" />
+
+```java
 class Solution {
     public int[] intersection(int[] nums1, int[] nums2) {
         //检查两个数组是否为空（没有分配内存），或者是被初始化成了length为0的数组（长度为0，但并不是null）
@@ -280,6 +309,7 @@ class Solution {
 * 设置size=1002是因为要包括0-1000的所有整数的可能性
 * List ArrayList也是只能使用Integer type, 所以之后要及时转化成原始的int array来作为返回的结果
 * 代码是代码随想录的，我只是copy paste，复习时应该自己写
+* 二刷笔记：完全没有必要用1002， 1001个就够用（0-1000只有1001个数字）
 ```java
 class Solution {
     public int[] intersection(int[] nums1, int[] nums2) {
@@ -313,6 +343,11 @@ class Solution {
 class Solution {
     public boolean isHappy(int n) {
         Set<Integer> record = new HashSet<>();
+        //二刷难点：这里为什么是&&?
+        //因为只有当它同时满足!=1, 之前没见过，才继续loop
+        //假如之前见过，不等于1， 那必须停止loop
+        //假如等于1， 之前没见过，也必须停止
+        //如果用||, 以上两种情况都会继续while loop而不是跳出来，所以不能用||
         while (n !=1 && !record.contains(n)){
             record.add(n);
             n = getNextNumber(n);
