--- a/Day07_Hashmap_454_383_15_18.md
+++ b/Day07_Hashmap_454_383_15_18.md
@@ -317,3 +317,58 @@ class Solution {
     }
 }
 ```
+* 二刷剪枝
+```java
+class Solution {
+    public List<List<Integer>> fourSum(int[] nums, int target) {
+        List<List<Integer>> res = new ArrayList<>();
+        Arrays.sort(nums);
+        for (int i =0; i< nums.length;i++){
+            //这里其实不用管正数负数的剪枝,只要i和j检查最小可能的和，和最大可能的和就行
+            if (i > 0 && nums[i] == nums[i-1]) continue;
+            for (int j = i+1;j<nums.length;j++){
+                if ( j > i+1 && nums[j] == nums[j-1]) continue;
+                int l = j+1, r = nums.length-1;
+                    while (l < r){
+                        //这里用long，防止int栈溢出， int最大是2^32, 2,147,483,647
+                        long sum = (long )nums[i] + nums[j] + nums[l] + nums[r];
+                        if (sum < target) l++;
+                        else if (sum > target) r--;
+                        else{
+                            res.add(Arrays.asList(nums[i],nums[j],nums[l],nums[r]));
+                            l++;
+                            r--;
+                            while (l<r && nums[l] == nums[l-1]) l++;
+                            while (l<r && nums[r] == nums[r+1]) r--;
+                        }
+                }
+            }
+        }
+        return res;
+    }
+}
+```
+* gpt 给出的剪枝方法
+```java
+for (int i = 0; i < n - 3; i++) {
+    if (i > 0 && nums[i] == nums[i - 1]) continue;
+
+    long min1 = (long) nums[i] + nums[i+1] + nums[i+2] + nums[i+3];
+    if (min1 > target) break;
+
+    long max1 = (long) nums[i] + nums[n-1] + nums[n-2] + nums[n-3];
+    if (max1 < target) continue;
+
+    for (int j = i + 1; j < n - 2; j++) {
+        if (j > i + 1 && nums[j] == nums[j - 1]) continue;
+
+        long min2 = (long) nums[i] + nums[j] + nums[j+1] + nums[j+2];
+        if (min2 > target) break;
+
+        long max2 = (long) nums[i] + nums[j] + nums[n-1] + nums[n-2];
+        if (max2 < target) continue;
+
+        // 下面就是你已有的 l-r 双指针逻辑
+    }
+}
+```
