--- a/Day07_Hashmap_454_383_15_18.md
+++ b/Day07_Hashmap_454_383_15_18.md
@@ -372,3 +372,103 @@ for (int i = 0; i < n - 3; i++) {
     }
 }
 ```
+## 二刷新题： 706 Design HashMap
+* https://leetcode.com/problems/design-hashmap/description/
+* youtube视频： https://www.youtube.com/watch?v=GLDyUKaQoYg
+### 解法1
+* 0 < key, value <- 10^6
+* 所以我们可以用一个size = 10^6 + 1的数组
+* 时间复杂度（O(1)), 空间复杂度： 10^6
+* 但是这样就不是hashmap，没有用上hashcode了
+```java
+class MyHashMap {
+
+    private int size;
+    private Node[] bucket;
+
+    public MyHashMap() {
+        // choose a prime bucket size ~ 10^4
+		//怎么决定什么bucketsize才是最合适的？
+        //我们想要reduce clustering in modulo hashing, 最好选择prime number, 这样，每个bucket list 可以尽量一样长
+        //情况一：假如我们选择size == root(key range) = 10^3, 那最长的list还是10^3那么长，不够好
+        //情况2:假如我们选择size = key range / 10 = 100k, 那performance很好，占空间也ok100k * 8 bytes (reference) = 800 KB， logically more like ~1MB after alignment
+        //情况3:直接用size = key range, 可以避免hash collision,但占空间特别大 （10mb）
+        //chat推荐：适用10^5附近的prime number e.g. 10007，这样可以避免clustering，也让performance和memory space都比较理想
+        this.size = 10007;
+        this.bucket = new Node[this.size];
+    }
+
+    private int hash(int key) {
+        return key % this.size;
+    }
+
+    public void put(int key, int value) {
+        int index = hash(key);
+
+        if (bucket[index] == null) {
+            bucket[index] = new Node(key, value);
+            return;
+        }
+
+        Node curr = bucket[index];
+        Node prev = null;
+
+        while (curr != null) {
+            if (curr.key == key) {
+                curr.val = value;  // update existing
+                return;
+            }
+            prev = curr;
+            curr = curr.next;
+        }
+
+        // append new node
+        prev.next = new Node(key, value);
+    }
+
+    public int get(int key) {
+        int index = hash(key);
+        Node curr = bucket[index];
+
+        while (curr != null) {
+            if (curr.key == key) return curr.val;
+            curr = curr.next;
+        }
+
+        return -1;
+    }
+
+    public void remove(int key) {
+        int index = hash(key);
+
+        Node curr = bucket[index];
+        Node prev = null;
+
+        while (curr != null) {
+            if (curr.key == key) {
+                if (prev == null) {
+                    bucket[index] = curr.next;
+                } else {
+                    prev.next = curr.next;
+                }
+                return;
+            }
+            prev = curr;
+            curr = curr.next;
+        }
+    }
+}
+
+class Node {
+    int key;
+    int val;
+    Node next;
+
+    public Node(int key, int val) {
+        this.key = key;
+        this.val = val;
+        this.next = null;
+    }
+}
+
+```
