--- a/Day15_BinaryTree_110_257_404_222.md
+++ b/Day15_BinaryTree_110_257_404_222.md
@@ -74,6 +74,35 @@ class Solution {
     }
 }
 ```
+### 二刷笔记
+* 尝试使用stringbuilder来写，但是因为stringbuilder不是string，是mutable，导致stringbuilder每一层都会被我们的代码改变，不会像string一样每层都会产生一个新的对象，所以会发生污染
+* 假如用stringbuilder，就一定得backtrack
+* 一开始我觉得backtrack很麻烦，因为要考虑把末尾的"->"也拿掉，只用deleteCharAt()会比较难操作，后来学到可以先保存原有的长度，再setLength()，就能移除新加上的部分了
+```java
+class Solution {
+
+    public List<String> binaryTreePaths(TreeNode root) {
+        List<String> res = new ArrayList<>();
+        StringBuilder sb = new StringBuilder();
+        buildPath(root, sb, res);
+        return res;
+    }
+
+    private void buildPath  (TreeNode root, StringBuilder sb, List<String> res){
+        if (root==null)return;
+        int len = sb.length();
+        sb.append(root.val);
+        if (root.left == null && root.right == null) {
+            res.add(sb.toString());
+        }else{
+            sb.append("->");
+            buildPath(root.left,sb,res);
+            buildPath(root.right,sb,res);
+        }
+        sb.setLength(len);
+    }
+}
+```
 ### 代码随想录解法：int数组储存path，展示显性回溯
 * 递归三部曲
     * 参数和返回值： 函数traversal，返回void（直接修改result List<String>），参数：根节点，int数组记录单条路径，List<String> result
