--- a/Day15_BinaryTree_110_257_404_222.md
+++ b/Day15_BinaryTree_110_257_404_222.md
@@ -78,6 +78,7 @@ class Solution {
 * 尝试使用stringbuilder来写，但是因为stringbuilder不是string，是mutable，导致stringbuilder每一层都会被我们的代码改变，不会像string一样每层都会产生一个新的对象，所以会发生污染
 * 假如用stringbuilder，就一定得backtrack
 * 一开始我觉得backtrack很麻烦，因为要考虑把末尾的"->"也拿掉，只用deleteCharAt()会比较难操作，后来学到可以先保存原有的长度，再setLength()，就能移除新加上的部分了
+* string方法不用回溯，但每层递归都会创建新的string object, wastes space，stringbuilder节省空间，但回溯逻辑要包括"->"有点难想，List<Integer>做path回溯最清晰，也节省空间
 ```java
 class Solution {
 
@@ -290,6 +291,7 @@ class Solution {
     * if (leftdepth == rightdepth) //是满二叉树
     * return 2^(leftdepth)-1
 * 单层递归逻辑：向左遍历，向右遍历，res = 左子树+右子树+1；
+* 二刷笔记：这个的时间复杂度很有意思，每递归一次，求高度就是log n, 然后再检查左边和右边分别是不是满二叉树，检查的过程中又要log n 检查一次高度，所以总时间复杂度是O((log n)^2) 
 ```java
 class Solution {
     public int countNodes(TreeNode root) {
