--- a/Day16_BinaryTree_513_112_113_106_105.md
+++ b/Day16_BinaryTree_513_112_113_106_105.md
@@ -4,7 +4,7 @@
 * 视频：https://www.bilibili.com/video/BV1eW4y1B7pD/?vd_source=62d2d5517cc65d630d19b32ed3dcf9c5
 ### 我写的层序遍历
 * 对哪里初始化que，2d array， 1d array要掌握清楚
-* 
+* 二刷笔记：层序遍历时间和空间复杂度都是O(n), 而递归的话时间依然是O(n)因为需要遍历完所有的节点，但是空间复杂度是O（h）（最坏的时候O(n)当树退化成链表，最好的时候O(log n )）， 因为不需要记录所有节点，唯一空间就是递归栈。此处h是树的高度
 ```java
 class Solution {
     public int findBottomLeftValue(TreeNode root) {
@@ -97,6 +97,24 @@ class Solution {
         //所有情况都没有返回true
         return false;
 
+    }
+}
+```
+* 二刷笔记：代码随想录的代码好丑，我自己写的比较好
+```java
+class Solution {
+    public boolean hasPathSum(TreeNode root, int targetSum) {
+        return dfs(root, targetSum, 0);
+    }
+    private boolean dfs (TreeNode root, int targetSum, int currSum){
+        if (root==null) return false;
+        currSum += root.val;
+        if (root.left == null && root.right == null){
+            return targetSum == currSum;
+        }
+        //这个地方不能直接在bfs left, right以后return false
+        //left, right只要有一个是true，就反回true
+        return dfs(root.left, targetSum, currSum) || dfs(root.right,targetSum, currSum);
     }
 }
 ```
