--- a/Day16_BinaryTree_513_112_113_106_105.md
+++ b/Day16_BinaryTree_513_112_113_106_105.md
@@ -165,6 +165,43 @@ class Solution {
     }
 }
 ```
+# 二刷笔记
+* 空间复杂度上，辅助空间用递归 + path 最大深度= O(h), 输出空间最坏为O(n^2)，假设每一条路径都符合条件
+* 时间复杂度上因为咱们要便利每个节点，所以O(n)就好，n为总节点个数
+```java
+class Solution {
+    public List<List<Integer>> pathSum(TreeNode root, int targetSum) {
+        List<List<Integer>> res = new ArrayList<>();
+        List<Integer> path = new ArrayList<>();
+
+        dfs(root, targetSum, 0, path, res);
+        return res;
+    }
+
+    private void dfs(TreeNode node, int targetSum, int currSum, List<Integer> path, List<List<Integer>> res){
+        if (node==null){
+            return;
+        }
+        currSum += node.val;
+        path.add(node.val);
+        if (node.left == null && node.right ==null){
+            if (currSum == targetSum){
+                //这里记得path就算add以后也会不停变化，随着回溯被删除，所以加一个copy最好
+                res.add (new ArrayList<>(path));
+            }
+            //到了leaf也要回溯哟
+            currSum -= node.val;
+            path.remove(path.size()-1);
+            return;
+        }
+        dfs(node.left, targetSum, currSum, path, res);
+        dfs(node.right, targetSum, currSum, path, res);
+        currSum -= node.val;
+        path.remove(path.size()-1);
+        return;
+    }
+}
+```
 ## 中序后序构造二叉树 106. Construct Binary Tree from Inorder and Postorder Traversal
 * https://leetcode.com/problems/construct-binary-tree-from-inorder-and-postorder-traversal/description/
 * 文章：https://programmercarl.com/0106.%E4%BB%8E%E4%B8%AD%E5%BA%8F%E4%B8%8E%E5%90%8E%E5%BA%8F%E9%81%8D%E5%8E%86%E5%BA%8F%E5%88%97%E6%9E%84%E9%80%A0%E4%BA%8C%E5%8F%89%E6%A0%91.html
